# atlas-scanner

./: README.md  pyproject.toml
atlas_scanner/: __init__.py  config.py  publisher.py  sanitizer.py  scanner.py
atlas_scanner/connectors/: __init__.py  azure.py  base.py  bitbucket.py  github.py  gitlab.py  jenkins.py
tests/: __init__.py  test_github.py  test_scanner.py
